compiler/testData/diagnostics/tests/cast/IsErasedAllowFromOutAtClass.kt
// FIR_IDENTICAL
fun f(a: List<Number>) = <!USELESS_IS_CHECK!>a is List<Any><!>
